# Knapsack-Solver

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  knapsack.py  main.py  pyproject.toml  requirements.txt  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: README.md
gui/: __init__.py  knapsack_gui.py
models/: __init__.py  knapsack_solver.py
utils/: __init__.py  validators.py
